The countdown start as soon as it's displayed

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="container" id="page2">
             <p></p>
             <input type="time" id="timeSelector" class="timeSelector" value="00:00">
-            <button type="submit" onclick="pag(3), clock()" class="btn-page2"></button>
+            <button type="submit" onclick="pag(3), clock(), play()" class="btn-page2"></button>
         </div>
 
 
