chenged readme as todo, mostly because i'm the only one reading that

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="container" id="page3">
             <p></p>
             <div class="text-container">
-                <p id="remainingTime">Casi br</p>
+                <p id="remainingTime"></p>
             </div>
             <div class="multimedia-container">
                 <li><img src="icons/loop.png" id="restart" onclick="restart()"></li>
