Added visual indication that the time has ended

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <!-- This page is to show the countdown and to alert when the time is up -->
 
         <div class="container" id="page3">
-           <h1 class="subtitle"><a onclick="pag(1)">Back to START</a></h1>
+           <h1 class="subtitle"><a onclick="pag(1), restart()">Back to START</a></h1>
             <div class="text-container">
                 <p id="remainingTime"></p>
             </div>
